tests/checker/ok/newtype_field_access.ow
Greeting = String

main = () -> Unit {
    Greeting("hello").String.print()
}
