tests/checker/fail/unknown_type_in_typedef.ow
Foo = NeverDeclared

main = () -> Unit {
    "ok".print()
}
